syntax = "proto3";

package frrpc;

enum eCompressType{
	eCompressType_Invilad = 0;
	eCompressType_Not = 1;
}


message RpcRequestMeta{
	uint64 request_id = 1;
}

message RpcResponseMeta{
}

message RpcMeta{
	string service_name = 1;
	int32 method_index = 2;
	RpcRequestMeta rpc_request_meta = 3;
	RpcResponseMeta rpc_response_meta = 4;
	bytes authentication_data = 5;

	eCompressType compress_type = 10;
}

