syntax = "proto3";

package frrpc.network;

enum eNetType{
	eNetType_Server = 0;
	eNetType_Gate = 1;
	eNetType_MQ = 2;
}

// different nettype use different field.
message NetInfo{
	repeated uint32 sockets = 1;	// Server and Gate;
}

